Add functional for task component

--- a/src/app/views/pages/auth/auth.component.scss
+++ b/src/app/views/pages/auth/auth.component.scss
@@ -1,7 +1,8 @@
 // import login css
 @import "sass/theme/pages/login/login-1";
 
-kt-auth, .kt-login {
+kt-auth,
+.kt-login {
 	height: 100%;
 
 	.mat-form-field {
